# lstm_c_pim

./: .gitignore  CMakeLists.txt  Makefile
dev_src/: lstm.c  main.c  tensor.c
include/: data.h  lstm.h  mat_ops.h  tensor.h  utils.h
src/: data.c  lstm.c  main.c  tensor.c
